test_out.txt
   Compiling escrow-multisig v0.1.0 (/home/edohwares/Desktop/Room/drips/AnchorPoint/src/escrow_multisig)
error[E0599]: no function or associated item named `generate` found for struct `soroban_sdk::Address` in the current scope
   --> src/escrow_multisig/test.rs:10:49
    |
 10 |     let signers = Vec::from_array(&e, [Address::generate(&e)]);
    |                                                 ^^^^^^^^ function or associated item not found in `soroban_sdk::Address`
    |
note: if you're trying to build a new `soroban_sdk::Address` consider using one of the following associated functions:
      soroban_sdk::Address::from_str
      soroban_sdk::Address::from_string
      soroban_sdk::Address::from_string_bytes
   --> /home/edohwares/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-22.0.11/src/address.rs:238:5
    |
238 |     pub fn from_str(env: &Env, strkey: &str) -> Address {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
250 |     pub fn from_string(strkey: &String) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
272 |     pub fn from_string_bytes(strkey: &Bytes) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: items from traits can only be used if the trait is in scope
help: trait `Address` which provides `generate` is implemented but not in scope; perhaps you want to import it
    |
  2 + use soroban_sdk::testutils::Address;
    |

error[E0599]: no function or associated item named `generate` found for struct `soroban_sdk::Address` in the current scope
   --> src/escrow_multisig/test.rs:12:30
    |
 12 |     let recipient = Address::generate(&e);
    |                              ^^^^^^^^ function or associated item not found in `soroban_sdk::Address`
    |
note: if you're trying to build a new `soroban_sdk::Address` consider using one of the following associated functions:
      soroban_sdk::Address::from_str
      soroban_sdk::Address::from_string
      soroban_sdk::Address::from_string_bytes
   --> /home/edohwares/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-22.0.11/src/address.rs:238:5
    |
238 |     pub fn from_str(env: &Env, strkey: &str) -> Address {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
250 |     pub fn from_string(strkey: &String) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
272 |     pub fn from_string_bytes(strkey: &Bytes) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: items from traits can only be used if the trait is in scope
help: trait `Address` which provides `generate` is implemented but not in scope; perhaps you want to import it
    |
  2 + use soroban_sdk::testutils::Address;
    |

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
  --> src/escrow_multisig/test.rs:14:25
   |
14 |     let contract_id = e.register_contract(None, EscrowMultisig);
   |                         ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

For more information about this error, try `rustc --explain E0599`.
warning: `escrow-multisig` (lib test) generated 1 warning
error: could not compile `escrow-multisig` (lib test) due to 2 previous errors; 1 warning emitted
